# Market-analyzer

./: .coverage  .editorconfig  .env.example  Makefile  RAILWAY.md  README.md  app.py  config.yaml  nixpacks.toml  pyproject.toml  quarantine.yaml  railway.json  request_stats.db  requirements.txt  settings.json  settings.json.example  watchlist.generated.yaml
.cache/: bybit_coininfo.json
.github/workflows/: deploy.yml
api/: __init__.py  auth.py  db.py  log_buffer.py  server.py
app/: __init__.py  bootstrap.py  context.py  handlers.py  tasks.py
connectors/: bybit_ws.py  jupiter.py
core/: __init__.py  arb_engine.py  bootstrap.py  calc.py  config.py  fees.py  jupiter_sanitizer.py  orderbook.py  quarantine.py  quarantine_manager.py  quarantine_verifier.py  runtime_settings.py  state.py  vwap.py  ws_cluster.py
core/arb/: __init__.py  dedup.py  denylist.py  engine.py  persistence.py  poller.py  stats.py  types.py  utils.py
core/auto_tune/: __init__.py  metrics.py  tuner.py
deploy/: README.md  TUNNEL_CHECK.md  cloudflared-config.yml.example  cloudflared-tunnel.service  market-analyzer.service
docs/: API.md  STATS_FLOW.md
notifier/: commands.py  telegram.py
tests/: test_api.py  test_auth.py  test_collections.py  test_quarantine.py
tools/: check_orderbook.py  gen_watchlist.py  quarantine_refresh.py  send_pinned_button.py
utils/: collections.py  log.py
webapp/: MINIAPP_SETUP.md  README.md  app.js  index.html  styles.css
