[project]
name = "market-analyzer"
version = "0.1.0"
description = "Arbitrage monitor Jupiter (Solana DEX) vs Bybit (CEX)"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [".venv", "__pycache__", ".git"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
